3.Semantic.Analysis/test/semanal/error/error4_1_1.mod
module input;
begin

end intput;
